--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "private": true,
-  "name": "ts",
+  "name": "eleme",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "tsc -p tsconfig.json",
     "precommit": "pretty-quick --staged"
   },
   "dependencies": {
