--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "eleme",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "precommit": "pretty-quick --staged"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "hex2dec": "^1.1.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
