--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "precommit": "pretty-quick --staged"
+    "prettier": "pretty-quick --staged"
   },
+  "pre-commit": [
+    "prettier"
+  ],
   "dependencies": {
     "axios": "^0.18.0",
     "hex2dec": "^1.1.0"
@@ -14,6 +17,7 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^10.9.4",
     "husky": "^0.14.3",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.14.2",
     "pretty-quick": "^1.6.0",
     "ts-node": "^7.0.1",
